@@ -131,6 +131,8 @@ Changes since 2.3.2
 61. src/slang.c: Made the run-time stack dynamically growable up to a
     maximum configured size.
 62. modules/: Documentation updates
+63. src/: Added _set_bos/f_compile_hook functions to specify a
+    function to get called when a statement or function gets compiled.
 
 {{{ Previous Versions
 
